fix icons not showing

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -478,7 +478,7 @@
   outline: none;
 }
 .quote-container form .field .form-field.active {
-  background-image: url("../../../images/icons/icon-error.svg");
+  background-image: url("/images/icons/icon-error.svg");
   background-repeat: no-repeat;
   background-size: 1.5rem;
   background-position: center right 2.5rem;
@@ -754,7 +754,7 @@
   justify-content: center;
   gap: 2rem;
   padding: 4rem 2rem;
-  background-image: url("../../../../images/icons/testomonial/bg-quotes.png");
+  background-image: url("/images/icons/testomonial/bg-quotes.png");
   background-repeat: no-repeat;
   background-size: 4rem;
   background-position: top 1rem left 1rem;
